--- a/api/FriendNetApp.SocialService/appsettings.json
+++ b/api/FriendNetApp.SocialService/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "auth.friendnet",
-    "Audience": "api.friendnet"
+    "Audience": "api.friendnet",
+    "SecretKey": "qwertyuiopasdfghjklzxcvbnm1234567890"
   }
 }
