--- a/api/FriendNetApp.MessagingService/appsettings.json
+++ b/api/FriendNetApp.MessagingService/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "auth.friendnet",
-    "Audience": "api.friendnet"
+    "Audience": "api.friendnet",
+    "SecretKey": "qwertyuiopasdfghjklzxcvbnm1234567890"
   },
   "RabbitMQ": {
     "Host": "localhost",
