--- a/api/FriendNetApp.UserProfile/appsettings.json
+++ b/api/FriendNetApp.UserProfile/appsettings.json
@@ -9,7 +9,8 @@
 
   "Jwt": {
     "Issuer": "auth.friendnet",
-    "Audience": "api.friendnet"
+    "Audience": "api.friendnet",
+    "SecretKey": "qwertyuiopasdfghjklzxcvbnm1234567890"
   },
   "RabbitMQ": {
     "Host": "localhost",
