--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^10.0.0",
     "@next/env": "^16.1.6",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
