--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -2,9 +2,9 @@ name: .NET Aspire CI
 
 on:
   push:
-    branches: [ "master", "main", "main2" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master", "main", "main2" ]
+    branches: [ "master" ]
 
 jobs:
   test:
@@ -35,26 +35,26 @@ jobs:
       env:
         JWTSECRET: ${{ secrets.JWTSECRET }}
         DOTNET_ENVIRONMENT: Development
-  working-directory: api
-  run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~RegisterCreateGetAll" --no-build --verbosity normal
+        working-directory: api
+        run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~RegisterCreateGetAll" --no-build --verbosity normal
 
     - name: Run Messaging Tests
       env:
         JWTSECRET: ${{ secrets.JWTSECRET }}
         DOTNET_ENVIRONMENT: Development
-  working-directory: api
-  run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~MessagingFunctionalTests" --no-build --verbosity normal
+        working-directory: api
+        run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~MessagingFunctionalTests" --no-build --verbosity normal
 
     - name: Run Social Tests
       env:
         JWTSECRET: ${{ secrets.JWTSECRET }}
         DOTNET_ENVIRONMENT: Development
-  working-directory: api
-  run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~SocialFunctionalTests" --no-build --verbosity normal
+        working-directory: api
+        run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~SocialFunctionalTests" --no-build --verbosity normal
 
     - name: Run Extended Integration Tests
       env:
         JWTSECRET: ${{ secrets.JWTSECRET }}
         DOTNET_ENVIRONMENT: Development
-  working-directory: api
-  run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~ExtendedScenariosTests" --no-build --verbosity normal
+        working-directory: api
+        run: dotnet test FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj --filter "FullyQualifiedName~ExtendedScenariosTests" --no-build --verbosity normal
