Fix Social Service Tests

--- a/api/FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj
+++ b/api/FriendNetApp.IntegrationTests/FriendNetApp.IntegrationTests.csproj
@@ -24,6 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="System.Net" />
     <Using Include="Microsoft.Extensions.DependencyInjection" />
     <Using Include="Aspire.Hosting.ApplicationModel" />
